# starlink-panel

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  build-apk-docker.sh  build-rust-cross.sh
files/: install-grpcurl.sh  luci-app-starlink-panel-acl.json  luci.starlink  luci.starlink-panel  status.css  status.js
openwrt-feed/luci/applications/luci-app-starlink-panel/: Makefile
openwrt-feed/luci/applications/luci-app-starlink-panel/htdocs/luci-static/resources/view/starlink-panel/: status.js
openwrt-feed/luci/applications/luci-app-starlink-panel/root/usr/libexec/rpcd/: luci.starlink-panel
openwrt-feed/net/starlink-dish/: Makefile
rust-src/: Cargo.toml
rust-src/src/: main.rs
