[package]
name = "starlink-dish"
version = "0.1.1"
edition = "2021"
description = "Starlink dish gRPC client for OpenWrt — replaces grpcurl in luci-app-starlink-panel"

[dependencies]
starlink-grpc-client = "0.3"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tonic = { version = "0.9", default-features = false, features = ["transport"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
